@@ -1,3 +1,7 @@
+2001-12-26  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* General.pm (getnum): Add is_numeric
+
 2001-12-23  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/KAPVIEW.pm (vector): Add multi colored vectors to polplot
